# raspi-pico-sdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: lib.rs
sys/: .gitignore  Cargo.toml  build.rs
sys/cmake_depend/: CMakeLists.txt
sys/cmake_pico/: CMakeLists.txt
